--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,12 @@
-exportPattern("^[[:alpha:]]+")
+export(add.edge)
+export(BICbnnet)
+export(empty.network)
+export(export.bnlearn)
+export(import.bnlearn)
+export(make.proposals)
+export(matrix2strength)
+export(mcmc)
+export(one.step)
+export(remove.edge)
+export(reverse.edge)
+S3method(plot,mhnet)
