--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mhnet
 Type: Package
 Title: Metropolis-Hastings type simulation and inference for Bayesian Networks
-Version: 0.2-0
+Version: 0.2-1
 Date: 2014-01-06
 Authors@R: c(person("Petr", "Simecek", role = c("aut", "cre", "ths"),
     email = "simecek@gmail.com"))
@@ -21,7 +21,6 @@ Collate:
     'make.proposals.R'
     'matrix2strength.R'
     'mcmc.R'
-    'myBIC.R'
     'one.step.R'
     'remove.edge.R'
     'reverse.edge.R'
@@ -29,3 +28,4 @@ Collate:
     'plot.mhnet.R'
     'BICbnnet.R'
     'export.bnlearn.R'
+    'BICcovar.R'
